--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
      <div class="card card-1" id="aboutme">
         <h2>Minusta</h2>
         <p>
-            Valmistuin vuonna 2017 ammattimuusikoksi Pop & Jazz Konservatoriolta. Sen jälkeen olen tehnyt  freelance-muusikkona töitä. Työkokemusta on kerääntynyt myös eri asiakaspalvelutehtävistä ja logistiikka-alan puolelta. Vuonna 2021 suoritin AMKoodari koulutusohjelman ja innostuin koodaamisesta. Koulutuksen aikana huomasin nauttivani koodaamisesta niin paljon, että tavoitteena oli työllistyä kyseiselle alalle. Pian sen jälkeen sattuikin avautumaan haku AW Academyyn ja onnekseni pääsin sisään.
+            Valmistuin vuonna 2017 ammattimuusikoksi Pop & Jazz Konservatoriolta. Sen jälkeen olen tehnyt  freelance-muusikkona töitä. Työkokemusta on kerääntynyt myös eri asiakaspalvelutehtävistä ja logistiikka-alan puolelta.</p>
+            <p>  Vuonna 2021 suoritin AMKoodari koulutusohjelman ja innostuin koodaamisesta. Koulutuksen aikana huomasin nauttivani koodaamisesta niin paljon, että tavoitteena oli työllistyä kyseiselle alalle. Pian sen jälkeen sattuikin avautumaan haku AW Academyyn ja onnekseni pääsin sisään.</p>
 
-Vapaa-aikani kuluu lähinnä musiikin ja liikunnan parissa. Harrastuksiin kuuluu mm. salilla käynti, frisbeegolf ja sulkapallo.
+<p>Vapaa-aikani kuluu lähinnä musiikin ja liikunnan parissa. Harrastuksiin kuuluu mm. salilla käynti, frisbeegolf ja sulkapallo.
            
         </p>
 
